# semantic-editor.old

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: build.rs  intent.rs  key.rs  main.rs  term.rs  ui.rs  update.rs  widget.rs
src/term/: captured.rs  mod.rs  resize.rs
